--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 #home-section {
-  background: url(/img/home.jpg);
+  background: url("../img/home.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
